# weekly-analytics

./: .gitignore  README.md  mypy.ini  pyproject.toml
core/: extraction.py
models/: __init__.py  data_models.py
tests/: conftest.py  test_data_models.py  test_extraction.py
utils/: logging_utils.py
